# runic

./: .gitignore  IMPROVEMENTS.md  README.md  Runic-v2.md  pyproject.toml  requirements.txt
codex/: cli.py  docs.py  memory.py
codex/templates/: instruct.md
runic/: chat_commands.py  cli.py  docs.py  memory.py
runic/.runic/: orchestrator.md  specialist.md
runic/.runic/core/: rules.md
runic/templates/: instruct.md  rules.md
runic/templates/core/: commands.md
runic/templates/memory/: interaction.md
runic/templates/memory/tracks/: track-management.md
