[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runic"
version = "0.1"
description = "An open-source framework that enhances Large Language Models (LLMs) with Long-Term Memory (LTM) and Retrieval-Augmented Generation (RAG). Ideal for AI coding assistants and other applications, it enables LLMs to retain context, adapt over time, and access up to date information, ensuring more intelligent and context-aware interactions."
requires-python = ">=3.7"
dependencies = [
    "click",
    "requests",
    "beautifulsoup4",
    "lxml",
    "markdownify"
]

[tool.setuptools]
packages = {find = {include = ["runic", "runic.*"]}}
include-package-data = true

[tool.setuptools.package-data]
codex = [
    "templates/**/*"
]

[project.scripts]
runic = "runic.cli:cli"
