[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runic"
version = "0.1.0b1"
description = "An open-source framework that enhances Large Language Models (LLMs) with Long-Term Memory (LTM) and Retrieval-Augmented Generation (RAG). Ideal for AI coding assistants and other applications, it enables LLMs to retain context, adapt over time, and access up to date information, ensuring more intelligent and context-aware interactions."
requires-python = ">=3.7"
authors = [
    {name = "Livinston Larus", email = "contact@livingstonlarus.com"}
]
license = {text = "MIT"}
keywords = ["llm", "ai", "memory", "context", "rag", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Documentation",
    "Topic :: System :: Installation/Setup",
    "Topic :: Text Processing :: Markup"
]
dependencies = [
    "click",
    "requests",
    "beautifulsoup4",
    "lxml",
    "markdownify"
]
project-urls = {
    "Homepage" = "https://github.com/livingstonlarus/runic",
    "Bug Tracker" = "https://github.com/livingstonlarus/runic/issues"
}

[tool.setuptools]
packages = {find = {include = ["runic", "runic.*"]}}
include-package-data = true

[tool.setuptools.package-data]
codex = [
    "templates/**/*"
]

[project.scripts]
runic = "runic.cli:cli"
